# openapi-specification

./: .bazeliskrc  .bazelrc  .releaserc  BUILD.bazel  README.md  WORKSPACE  openapi-smusher.sh  package-lock.json  package.json  pnpm-lock.yaml  smusher-config.json  tsconfig.json
generator/documentation/: BUILD.bazel
generator/postman/: BUILD.bazel  postman.ts
generator/requests/: BUILD.bazel  requests.ts  types.ts
generator/responses/: BUILD.bazel
redocly/: plugins.js  (+4 more)
rules/: BUILD.bazel  redocly_cli.bzl
specification/: BUILD.bazel  index.yml
specification/parameters/: _index.yml
specification/parameters/address/: address.yml  address_components.yml  cc_format.yml  fields.yml  input.yml  language.yml  latlng.yml  limit.yml  location.yml  public_id.yml
specification/parameters/distance/: alternatives.yml  arrival_time.yml  avoid.yml  departure_time.yml  destination.yml  destinations.yml  details.yml  elements.yml  language.yml  method.yml  mode.yml  origin.yml  origins.yml  units.yml  value.yml  waypoints.yml
specification/parameters/geolocation/: ip_address.yml  limit.yml
specification/parameters/localities/: address.yml  addresses_per_page.yml  categories.yml  cc_format.yml  custom_description.yml  data.yml  excluded_categories.yml  excluded_extended_types.yml  excluded_types.yml  extended.yml  extended_types.yml  fields.yml  geocode_types.yml  input.yml  language.yml  latlng.yml  limit.yml  list_sub_buildings.yml  localities_components.yml  location.yml  nearby_excluded_types.yml  nearby_types.yml  page.yml  public_id.yml  radius.yml  search_types.yml  session_id.yml  types.yml
specification/parameters/search/: encoded_polyline.yml  language.yml  lat.yml  limit.yml  lng.yml  page.yml  query.yml  radius.yml  stores_by_page.yml  zone.yml
specification/parameters/zones/: limit.yml  offset.yml
specification/paths/: _index.yml
specification/paths/address/: addressAutocomplete.yml  addressGeocode.yml
specification/paths/distance/: distanceIsochrone.yml
specification/paths/geolocation/: geolocationPosition.yml  geolocationTimezone.yml
specification/paths/localities/: localitiesAutocomplete.yml  localitiesDetails.yml  localitiesGeocode.yml  localitiesNearby.yml  localitiesSearch.yml
specification/paths/search/: storesAutocomplete.yml  storesBounds.yml  storesSearch.yml
specification/paths/stores/: storeGet.yml  storesCreate.yml  storesDelete.yml  storesReplace.yml  storesUpdate.yml
specification/paths/zones/: zoneDelete.yml  zoneGet.yml  zonesCreate.yml  zonesDelete.yml  zonesList.yml  zonesUpdate.yml
specification/requests/: woosmap_http_distance_matrix_async_request.yml
specification/responses/: woosmap_http_address_autocomplete_collection_response.yml  woosmap_http_address_geocode_collection_response.yml  woosmap_http_asset_feature_collection_response.yml  woosmap_http_asset_feature_response.yml  woosmap_http_distance_isochrone_response.yml  woosmap_http_distance_matrix_async_response.yml  woosmap_http_distance_matrix_async_result_response.yml  woosmap_http_distance_matrix_async_status_response.yml  woosmap_http_distance_matrix_request_response.yml  woosmap_http_distance_matrix_response.yml  woosmap_http_distance_route_response.yml  woosmap_http_distance_tolls_response.yml  woosmap_http_geolocation_position_response.yml  woosmap_http_geolocation_stores_response.yml  woosmap_http_geolocation_timezone_response.yml  woosmap_http_localities_autocomplete_collection_response.yml  woosmap_http_localities_details_address_response.yml  woosmap_http_localities_details_postal_code_response.yml  woosmap_http_localities_geocode_collection_response.yml  woosmap_http_localities_nearby_collection_response.yml  woosmap_http_localities_reverse_geocode_collection_response.yml
specification/schemas/: AddressGeocodeTypes.yml  AssetAddressRequest.yml  AssetAddressResponse.yml  AssetOpeningHours.yml  AssetRequest.yml  AssetResponse.yml  GeolocationResponse.yml  GeolocationStoresResponse.yml  LocalitiesAutocompleteResponse.yml  LocalitiesDetailsResponse.yml  LocalitiesGeocodeResponse.yml  LocalitiesNearbyCategory.yml  LocalitiesNearbyCollectionResponse.yml  LocalitiesNearbyExtendedType.yml  LocalitiesNearbyResponse.yml  LocalitiesTypes.yml  LocalitiesTypesAll.yml  LocalitiesTypesPoi.yml  LocalitiesTypesPoiAlias.yml  TimezoneResponse.yml  _index.yml
specification/snippets/woosmap_http_address_autocomplete_collection/: woosmap_http_address_autocomplete_collection.curl.yml  woosmap_http_address_autocomplete_collection.javascript.yml  woosmap_http_address_autocomplete_collection.nodejs.yml  woosmap_http_address_autocomplete_collection.python.yml
specification/snippets/woosmap_http_address_details/: woosmap_http_address_details.curl.yml  woosmap_http_address_details.javascript.yml  woosmap_http_address_details.nodejs.yml  woosmap_http_address_details.python.yml
specification/snippets/woosmap_http_address_geocode_collection/: woosmap_http_address_geocode_collection.curl.yml  woosmap_http_address_geocode_collection.javascript.yml  woosmap_http_address_geocode_collection.nodejs.yml  woosmap_http_address_geocode_collection.python.yml
specification/snippets/woosmap_http_asset_autocomplete_feature_collection/: woosmap_http_asset_autocomplete_feature_collection.curl.yml  woosmap_http_asset_autocomplete_feature_collection.javascript.yml  woosmap_http_asset_autocomplete_feature_collection.nodejs.yml  woosmap_http_asset_autocomplete_feature_collection.python.yml
specification/snippets/woosmap_http_asset_feature/: woosmap_http_asset_feature.curl.yml  woosmap_http_asset_feature.javascript.yml  woosmap_http_asset_feature.nodejs.yml  woosmap_http_asset_feature.python.yml
specification/snippets/woosmap_http_asset_feature_collection/: woosmap_http_asset_feature_collection.curl.yml  woosmap_http_asset_feature_collection.javascript.yml  woosmap_http_asset_feature_collection.nodejs.yml  woosmap_http_asset_feature_collection.python.yml
specification/snippets/woosmap_http_asset_search_by_zone_feature_collection/: woosmap_http_asset_search_by_zone_feature_collection.curl.yml  (+3 more)
(+187 files in other folders)
