load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("//tools:ts_wrapper.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "dist-is-updated",
    srcs = ["dist-is-updated.ts"],
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/@types/yargs",
        "//:node_modules/dir-compare",
        "//:node_modules/tar",
        "//:node_modules/tmp",
        "//:node_modules/yargs",
    ],
)

ts_project(
    name = "schema-in-index",
    srcs = ["schema-in-index.ts"],
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@types/glob",
        "//:node_modules/@types/node",
        "//:node_modules/@types/yargs",
        "//:node_modules/glob",
        "//:node_modules/tar",
        "//:node_modules/tmp",
        "//:node_modules/yargs",
    ],
)

ts_project(
    name = "schema-title",
    srcs = ["schema-title.ts"],
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@types/glob",
        "//:node_modules/@types/node",
        "//:node_modules/@types/yargs",
        "//:node_modules/openapi-types",
        "//:node_modules/yargs",
    ],
)

ts_project(
    name = "dereference_lib",
    srcs = ["dereference.ts"],
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@apidevtools/json-schema-ref-parser",
        "//:node_modules/@types/node",
        "//:node_modules/@types/yargs",
        "//:node_modules/openapi-types",
        "//:node_modules/yargs",
    ],
)

ts_project(
    name = "parameters_lib",
    srcs = ["parameters.ts"],
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@types/glob",
        "//:node_modules/@types/node",
        "//:node_modules/@types/yargs",
        "//:node_modules/glob",
        "//:node_modules/yargs",
    ],
)

js_binary(
    name = "dereference",
    data = [
        ":dereference_lib",
    ],
    entry_point = "dereference_lib",
)

js_binary(
    name = "parameters",
    data = [
        ":parameters_lib",
    ],
    entry_point = "parameters_lib",
)
