load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("//tools:ts_wrapper.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "_lib",
    srcs = glob(["*.ts"]),
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@types/axios",
        "//:node_modules/@types/node",
        "//:node_modules/@types/yargs",
        "//:node_modules/axios",
        "//:node_modules/tar-stream",
        "//:node_modules/yargs",
    ],
)

js_binary(
    name = "_postman_bin",
    args = [
        "--collection",
        "18437534-dad12f37-6d84-42d1-9889-2f529aee0ab9",
        "--file",
        "$(rootpath //:woosmap-postman.json)",
    ],
    data = [
        ":_lib",
        "//:woosmap-postman.json",
    ],
    entry_point = ":postman.js",
)
