load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_run_binary")
load("//tools:ts_wrapper.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "_lib",
    srcs = glob(["**/*.ts"]),
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/@types/yargs",
        "//:node_modules/js-yaml",
        "//:node_modules/postman-code-generators",
        "//:node_modules/postman-collection",
        "//:node_modules/prettier",
        "//:node_modules/query-string",
        "//:node_modules/tar-stream",
        "//:node_modules/yargs",
    ],
)

js_binary(
    name = "_snippets_bin",
    data = [
        ":_lib",
        "//specification:openapi3",
    ],
    entry_point = ":snippets.js",
)

js_run_binary(
    name = "snippets",
    srcs = [":_snippets_bin"],
    outs = ["snippets.tar"],
    args = [
        "--output",
        "$(rootpath snippets.tar)",
    ],
    tool = ":_snippets_bin",  # Add the tool argument
)

js_binary(
    name = "_samples_bin",
    data = [
        ":_lib",
        "//specification:openapi3",
    ],
    entry_point = ":x-code-samples.js",
    node_options = [
        "--experimental-modules",
        "--es-module-specifier-resolution=node",
    ],
)
