load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("//tools:ts_wrapper.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "_lib",
    srcs = glob(["*.ts"]),
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@types/axios",
        "//:node_modules/@types/node",
        "//:node_modules/@types/yargs",
        "//:node_modules/axios",
        "//:node_modules/prettier",
        "//:node_modules/tar-stream",
        "//:node_modules/yargs",
    ],
)

js_binary(
    name = "_responses_bin",
    args = [
        "--archive",
        "$(rootpath //generator/requests:snippets.tar)",
    ],
    data = [
        ":_lib",
        "//generator/requests:snippets.tar",
    ],
    entry_point = ":response.js",
    env = {
        "WOOSMAP_PRIVATE_API_KEY": "$(WOOSMAP_PRIVATE_API_KEY)",
        "WOOSMAP_PUBLIC_API_KEY": "$(WOOSMAP_PUBLIC_API_KEY)",
    },
)
